Adjust content (Mar 2021)

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       Hello, my name is Muhammad Ismail Yusuf.
     </p>
     <p id="profile-subtitle">
-      I'm a software developer.
+      I'm a software engineer.
     </p>
     <p id="profile-content">
       I graduated from high school in mid-2018, then soon after that,
-      took my gamble on a coding boot camp called <a href="https://hacktiv8.com/fullstack" target="_blank" class="profile-link">Hacktiv8</a>.<br><br>
+      took my gamble on a coding boot camp called <a href="https://hacktiv8.com" target="_blank" class="profile-link">Hacktiv8</a>.<br><br>
 
       I presented my final project towards the end of November and started working
       as a software engineer in January 2019.<br><br>
