Adjust content (Oct 2021)

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       I presented my final project towards the end of November and started working
       as a software engineer in January 2019.<br><br>
 
-      I love playing video games, watching movies, and traveling. I haven't traveled much
-      but I do hope that one day I can travel & work remotely from anywhere in the world.<br><br>
+      I love playing video games, watching movies, and traveling. I haven't been able to
+      travel much but I do hope that one day I can travel around the world.<br><br>
 
       Now, did you happen to notice that the domain that I'm using is actually ismailnagib.com,
       not let's say, ismailyusuf.com or something like that?<br><br>
 
-      Well, the "nagib" part is actually my family name and I'm kinda used to use it for my usernames,
+      Well, the "nagib" part is actually my family name and I'm kinda used to using it for my usernames,
       including my <a href="https://github.com/ismailnagib" target="_blank" class="profile-link">GitHub</a>
       and <a href="https://www.linkedin.com/in/ismailnagib" target="_blank" class="profile-link">LinkedIn</a>
       (you are welcome to check them out, of course). 
