--- a/index.html
+++ b/index.html
@@ -15,29 +15,19 @@
       Hello, my name is Muhammad Ismail Yusuf.
     </p>
     <p id="profile-subtitle">
-      I'm a software engineer.
+      I'm a software engineer.<br>
+      Currently based in Indonesia.
     </p>
     <p id="profile-content">
-      I graduated from high school in mid-2018, then soon after that,
-      took my gamble on a coding boot camp called <a href="https://hacktiv8.com" target="_blank" class="profile-link">Hacktiv8</a>.<br><br>
-
+      I graduated from high school in mid-2018, then soon after that, took my gamble on a coding boot camp.
       I presented my final project towards the end of November and started working
       as a software engineer in January 2019.<br><br>
 
-      I love playing video games, watching movies, and traveling. I haven't been able to
-      travel much but I do hope that one day I can travel around the world.<br><br>
+      Outside of programming, I enjoy playing video games, watching movies, and traveling.<br><br>
 
-      Now, did you happen to notice that the domain that I'm using is actually ismailnagib.com,
-      not let's say, ismailyusuf.com or something like that?<br><br>
-
-      Well, the "nagib" part is actually my family name and I'm kinda used to using it for my usernames,
-      including my <a href="https://github.com/ismailnagib" target="_blank" class="profile-link">GitHub</a>
-      and <a href="https://www.linkedin.com/in/ismailnagib" target="_blank" class="profile-link">LinkedIn</a>
-      (you are welcome to check them out, of course). 
+      You can contact me through <a href="https://www.linkedin.com/in/ismailnagib" target="_blank" class="profile-link">LinkedIn</a>
+      or <a href="mailto:mismailyusuf@gmail.com" target="_blank" class="profile-link">email</a>.
     </p>
   </div>
-  <script>
-    console.log("You can find my CV here --> https://ismailnagib.com/cv.pdf. Thank you for checking it out.")
-  </script>
 </body>
 </html>
